<resources>
    <string name="app_name">CellIdOnDemand</string>
    <string name="text_cellinfo">CellInfo en attente</string>
    <string name="text_cellid">CellID</string>
    <string name="titre_cellid">CellID: </string>
    <string name="titre_n_cells">cellinfo size: </string>
    <string name="titre_radio">radio: </string>
    <string name="titre_mnc">mnc: </string>
    <string name="text_mnc">0</string>
    <string name="titre_mcc">mcc: </string>
    <string name="text_mcc">0</string>
    <string name="titre_lac">lac: </string>
    <string name="text_lac">0</string>
    <string name="text_radio">radio </string>
    <string name="text_n_cells">0</string>
    <string name="text_n_bdd">0</string>
    <string name="action_settings">Settings</string>
</resources>
